# CSFML

./: .gitgnore  CMakeLists.txt
src/: CMakeLists.txt  CSFML.c
